styles/menu-item.module.css
.navLinkItem {
  padding: 0.75rem;
}

.navLinkText {
  color: #333;
  text-decoration: none;
}

.navLinkText:hover {
  font-weight: bold;
}

.navLinkText:active {
  color: dodgerblue;
}

.active {
  color: dodgerblue;
}

@media (max-width: 768px) {
  .navLinkItem {
    margin: 2rem 1rem;
    border-bottom: 1px solid #ccc;
    padding: 0;
    padding-right: 0.33rem;
  }

  .navLinkText {
    color: #000;
    font-size: 24px;
    text-decoration: none;
  }

  .navLinkText:hover {
    color: dodgerblue;
    font-weight: bold;
  }

  .navLinkText:active {
    color: #333;
  }
}

